--- a/ML-101 Modules/Module 03/Lesson 02/Practice 1/Gender - Practice Code Part 3&4.ipynb
+++ b/ML-101 Modules/Module 03/Lesson 02/Practice 1/Gender - Practice Code Part 3&4.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8a098885",
    "metadata": {},
    "source": [
     "## Part 3: Data Wrangling and Transformation."
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b0b88774",
    "metadata": {
     "papermill": {
      "duration": 0.029702,
@@ -26,6 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 354,
+   "id": "03aeb08d",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-05-12T06:37:38.722329Z",
@@ -51,6 +54,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "080aa1b5",
    "metadata": {},
    "source": [
     "* ### 'Train\\Test' split"
@@ -59,6 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 355,
+   "id": "70547194",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,6 +73,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "41bdac17",
    "metadata": {},
    "source": [
     "## Part 4: Machine Learning."
@@ -75,6 +81,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "35668172",
    "metadata": {},
    "source": [
     "* ### Build, train and evaluate model"
@@ -82,6 +89,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cc62d545",
    "metadata": {
     "papermill": {
      "duration": 0.025229,
@@ -99,6 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 356,
+   "id": "6a8891a2",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-05-12T06:37:39.015844Z",
@@ -126,6 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 360,
+   "id": "23b929a4",
    "metadata": {},
    "outputs": [
     {
@@ -146,6 +156,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c5dbd62e",
    "metadata": {},
    "source": [
     "* ### Visualisation of predictions"
@@ -154,6 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 364,
+   "id": "128897dc",
    "metadata": {},
    "outputs": [
     {
@@ -290,6 +302,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2ee477fe",
    "metadata": {},
    "source": [
     "* ### Classification report"
@@ -298,6 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 357,
+   "id": "b08a5220",
    "metadata": {
     "scrolled": false
    },
@@ -326,6 +340,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1e6d6b3e",
    "metadata": {},
    "source": [
     "* ### Confusion matrix"
@@ -334,6 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 358,
+   "id": "a5d0c419",
    "metadata": {},
    "outputs": [
     {
@@ -381,6 +397,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5c6cee53",
    "metadata": {},
    "source": [
     "* ### ROC-AUC score"
@@ -389,6 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 359,
+   "id": "457cd6bb",
    "metadata": {
     "scrolled": false
    },
@@ -411,6 +429,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9e34c287",
    "metadata": {},
    "source": [
     "##  Conclusion."
@@ -418,6 +437,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1d11e345",
    "metadata": {},
    "source": [
     "**The main question** was: Predict a person's gender based on their personal preferences (check balance of classes; calculate perdictions).\n",
@@ -434,6 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "daa7b05a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -441,7 +462,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -455,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   },
   "papermill": {
    "default_parameters": {},
